<resources>
    <string name="app_name">Taller SQLITE</string>
    <string name="addContact">Agregar Registro</string>
    <string name="listContacto">Lista De Registros</string>
    <string name="exit">Salir</string>
    <string name="name">Nombre</string>
    <string name="lastname">Sistólico</string>
    <string name="phone">Diastólico</string>
    <string name="birthday">Fecha</string>
    <string name="update">Actualizar</string>
    <string name="ingresar">Ingresar</string>


</resources>
