<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".addContactActivity">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/name"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/lastname"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/phone"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etApellido" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/birthday"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

        <Button
            android:id="@+id/birthdayButton"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_white"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:autofillHints="" />

        <Button
            android:id="@+id/ingresarButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/edit_text_white"
            android:text="@string/ingresar"
            android:textColor="#fff"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdayButton" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>